<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.bithon.agent</groupId>
    <artifactId>agent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <relativePath>../../pom.xml</relativePath>
  </parent>
  <artifactId>agent-plugin-jvm-jdk9</artifactId>

  <properties>
    <maven.compiler.source>1.9</maven.compiler.source>
    <maven.compiler.target>1.9</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.bithon.agent</groupId>
      <artifactId>agent-plugin-jvm</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>jdk9+</id>
      <activation>
        <jdk>[1.9,)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>build-helper-maven-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <id>add-source</id>
                <phase>initialize</phase>
                <goals>
                  <goal>add-source</goal>
                </goals>
                <configuration>
                  <sources>
                    <source>src9/main/java</source>
                  </sources>
                </configuration>
              </execution>
              <execution>
                <id>add-resource</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>add-resource</goal>
                </goals>
                <configuration>
                  <resources>
                    <resource><directory>src9/main/resources</directory></resource>
                  </resources>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <encoding>UTF-8</encoding>
              <compilerVersion>1.9</compilerVersion>
              <source>1.9</source>
              <target>1.9</target>
              <compilerArgs>
                <arg>--add-exports</arg>
                <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                <arg>--add-exports</arg>
                <arg>java.base/jdk.internal.access=ALL-UNNAMED</arg>
              </compilerArgs>
            </configuration>
          </plugin>

          <plugin>
            <groupId>de.thetaphi</groupId>
            <artifactId>forbiddenapis</artifactId>
            <version>3.1</version>
            <configuration>
              <failOnUnresolvableSignatures>false</failOnUnresolvableSignatures>
              <bundledSignatures>
                <!--
                  This will automatically choose the right
                  signatures based on 'maven.compiler.target':
                  -->
                <bundledSignature>jdk-unsafe</bundledSignature>
              </bundledSignatures>
              <signaturesFiles>
                <signaturesFile>${project.parent.basedir}/../dev/forbidden-apis-joda-time.txt</signaturesFile>
                <signaturesFile>${project.parent.basedir}/../dev/forbidden-apis-bithon.txt</signaturesFile>
              </signaturesFiles>
              <excludes>
                <exclude>**/SomeAvroDatum.class</exclude>
              </excludes>
              <suppressAnnotations>
                <annotation>**.SuppressForbidden</annotation>
              </suppressAnnotations>
            </configuration>
            <executions>
              <execution>
                <id>compile</id>
                <phase>compile</phase>
                <goals>
                  <goal>check</goal>
                </goals>
                <!-- override the bundledSignature because openjdk9+ does not recognized it -->
              </execution>
              <execution>
                <id>testCompile</id>
                <phase>test-compile</phase>
                <goals>
                  <goal>testCheck</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>